<resources>
    <string name="app_name">My Application</string>

    <!-- Меню -->
    <string name="map">Карта</string>
    <string name="list">Список станций</string>
    <string name="favorites">Избранное</string>
    <string name="profile">Мой профиль</string>


    <string name="station_name">BRYNSKAYA4 #15</string>
    <string name="station_address"> Красноярск, ул.Брянская, 4</string>
    <string name="working_time_24">Круглосуточно</string>
    <string name="working_time_6_to_18">6:00–18:00</string>
    <string name="working_time_9_to_21">9:00–21:00</string>
    <string name="favorites_empty">Добавьте станции в избранное</string>
    <string name="nav">Маршрут</string>

    <string name="station_status_free">Свободно</string>
    <string name="station_status_busy">Занято</string>
    <string name="station_status_offline">Не в сети</string>

    <string name="location_title">Местоположение</string>
    <string name="power_title">Мощность:</string>
    <string name="power">24 кВт:</string>
    <string name="tariff_title">Тариф:</string>
    <string name="tariff">5.5 руб/кВт·ч</string>
    <string name="status_title">Статус:</string>
    <string name="location">на заправке Лукойл</string>
    <string name="connector_ccs2">CCS2</string>

    <string name="charging_title">Заряжается</string>
    <string name="session_id_label">Номер сессии:</string>
    <string name="session_id_example">12345</string>
    <string name="duration_label">Продолжительность:</string>
    <string name="duration">00:15:30</string>
    <string name="current_power_label">Текущая мощность:</string>
    <string name="current_power">42.5 кВт</string>
    <string name="power_consumed_label">Потреблено:</string>
    <string name="power_consumed">10.7 кВт·ч</string>
    <string name="total_cost_label">Итого:</string>
    <string name="total_cost">58.85 руб</string>

    <string name="start_charging">Начать зарядку</string>
    <string name="stop_charging">Остановить зарядку</string>

    <string name="profile_title">Мой профиль</string>
    <string name="phone_label">Телефон</string>
    <string name="email_label">Почта</string>
    <string name="settings_title">Настройки</string>
    <string name="language_setting">Язык (English/Russian)</string>
    <string name="session_history">История зарядок</string>
    <string name="phone">+7 999 999–99–99</string>
    <string name="email">user@example.com</string>
    <string name="history">История зарядок</string>

    <string name="my_location">Мое местоположение</string>
    <string name="permission_required">Для работы карты требуются разрешения</string>
    <string name="cacheManagerHandlingMessage" formatted="false">...</string>
</resources>