<!-- item_favorite.xml -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">


    <!-- Карточка станции -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@color/white"
        android:elevation="8dp"
        android:padding="16dp">

        <!-- Первая строка -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <!-- Иконка станции -->
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_ev_station"
                android:layout_marginEnd="8dp"/>

            <!-- Название и адрес -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station_name"
                    android:textSize="18sp"
                    android:letterSpacing="0.1"
                    android:textColor="@color/station_name_black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_station_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station_address"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.2"
                    android:textColor="@color/station_address_gray"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_remove"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

        <!-- Вторая строка -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">


            <!-- Иконка времени -->
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_worktime"
                app:tint="@color/primary"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="16dp"/>

            <!-- Время работы -->
            <TextView
                android:id="@+id/tv_working_hours"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/working_time_24"
                android:textSize="14sp"
                android:textColor="@color/gray"/>

            <!-- Кнопка маршрута -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_navigation"
                    app:tint="@color/primary"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nav"
                    android:textColor="@color/primary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>